@@ -5,9 +5,10 @@
 #  ruby -r oci8 -e 'OCI8.new("scott", "tiger", nil).exec("select * from emp") do |r| puts r.join(","); end'
 #  # select all data from emp and print them as CVS format.
 require 'oci8lib'
-require 'ocidatetime.rb'
 require 'oci8/oci8.rb'
 require 'oci8/metadata.rb'
+require 'oci8/compat.rb'
+require 'ocidatetime.rb'
 
 class OCI8
   VERSION = '@@OCI8_MODULE_VERSION@@'
